fix layout issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,7 +87,7 @@ header h1{
   animation-name: crazyFade;
   animation-duration: .4s;
   animation-delay: .1s;
-  animation-iteration-count: 5;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-direction: left;
 }
